# CMU-VLA-Challenge

./: .gitignore  requirements.txt
ai_module/src/dummy_vlm/: CMakeLists.txt  package.xml
ai_module/src/dummy_vlm/data/: object_coords.txt  object_list.txt  object_list_detect.txt  object_list_updated.txt
ai_module/src/dummy_vlm/launch/: dummy_vlm.launch
ai_module/src/dummy_vlm/scripts/: camera_save_and_detect.py  clear_object_list.py  paired_detect_and_depth.py
ai_module/src/dummy_vlm/src/: dummyVLM.cpp  fetch_and_detect.py  frontier_explorer.cpp  getting-3d-coords.py  image_lidar_capture.cpp  object_detection.py  pc_to_grid.cpp  publish_questions.py
docker/: Dockerfile  Dockerfile_base  compose.yml  compose_gpu.yml  ros_entrypoint.sh
